<resources>
    <string name="app_name">TrainerHelper</string>
    <string name="atras">Atras</string>
    <string name="siguiente">Siguiente</string>
    <string name="incluir_actividad">Añadir actividad</string>
    <string name="ejercicio">Ejercicio</string>
    <string name="descripcion">Descripcion</string>
    <string name="duracion">Duración</string>
    <string name="min">Min.</string>ç
    <string name="max">Max.</string>
    <string name="materiales">Materiales</string>
    <string name="spinner_hint">Selecciona un deporte</string>
    <string name="crear_sesion">Crear sesión</string>
    <string name="nada"> </string>
    <string name="borrar_actividad">Borrar actividad</string>
    <string name="borrar">Borrar</string>
    <string name="ver_actividades">Ver actividades</string>
    <string name="acceder">Acceder</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="acceder_dev">Acceso desarrolladres</string>
    <string name="copyright">TrainerHelper - Developed by Jaime and Manuel © 2024</string>
    <string name="extraer_ejercicios">Extraer ejercicios</string>
    <string name="ej_para_importar">Ej para importar</string>
    <string name="importar">Importar</string>
    <string name="ejercicio_eliminado">Ejercicio eliminado</string>
    <string name="error_archivo_no_encontrado">Archivo no encontrado</string>
    <string name="error_excepcion">Excepcion</string>
    <string name="error_no_se_ha_podido_escribir">No se ha podido escribir</string>
    <string name="sesion_copiada">Sesion copiada</string>
    <string name="introduzca_una_duracion">Introduzca una duracion</string>
    <string name="error_en_la_validacion_del_ejercicio">Error en la validacion del ejercicio</string>
    <string name="error_no_se_pudo_aniadir_el_ejercicio_correctamente">No se pudo añadir el ejercicio correctamente</string>
    <string name="se_ha_creado_el_ejercicio">Se ha creado el ejercicio</string>
    <string name="este_ejercicio_ya_exisite">Este ejercicio ya exisite</string>
    <string name="el_numero_de_participantes_es_erroneo">El numero de participantes es erroneo</string>
    <string name="rellena_todos_los_apartados">Rellena todos los apartados</string>
    <string name="comprobacion_elimiar_ejercicio">"¿Estás seguro de que quieres eliminar el ejercicio "</string>
    <string name="confirmacion">Confirmación</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string-array name="deportes">
        <item>Hockey</item>
        <item>Patines</item>
        <item>Natación</item>
        <item>Voleybol</item>
        <item>Padel</item>
        <item>Fútbol</item>
    </string-array>
</resources>