<!-- Diseño para la actividad de "Crear Sesión" -->
<!-- Se define un ScrollView para poder hacer Scroll -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <!-- Se define un relative layout, el cual
     coge de referencia los distintos elementos
     para situar nuevos elementos-->
    <RelativeLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="45dp">

        <!-- botón para volver al menú principal -->

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:text="@string/atras" />
        <!-- botón para crear la sesión -->
        <Button
            android:id="@+id/btnCrearSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/button"
            android:text="@string/crear_sesion" />
        <!-- Spinner para elegir el deporte del que crear la sesión -->
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="200dp"
            android:layout_marginBottom="138dp"
            android:prompt="@string/spinner_hint"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.288" />
        <!-- Input de la duración de la sesión -->
        <EditText
            android:id="@+id/seleccionarDuracion"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-150dp"
            android:layout_marginTop="75dp"
            android:layout_toEndOf="@+id/spinner"
            android:ems="10"
            android:hint="@string/duracion"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent" />
        <!-- Aquí aparecerá la información correspondiente de la sesión cuando se presione el botón de crear sesión -->
        <TextView
            android:id="@+id/sesionCreada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-100dp"
            android:layout_marginEnd="20dp"
            android:text="@string/nada"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.479" />
        <!-- Botón para copiar la sesión al portapapeles, solo aparece una vez creada la sesión -->
        <Button
            android:id="@+id/btnCopiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sesionCreada"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/button"
            android:text="Copiar sesion"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>
